<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_64"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_learningVocab"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/learning_vocabulary"/>
        <item
                android:id="@+id/nav_learningGrammar"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/leaning_grammar"/>
        <item
                android:id="@+id/nav_vocabulayquiz"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/vocabulary_quiz"/>
        <item
                android:id="@+id/nav_grammarquiz"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/grammar_quiz"/>
        <item
                android:id="@+id/nav_quizVocabRep"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/vocabulary_report"/>

        <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_account_circle_24px"
                android:title="@string/profile"/>
        <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_logout_24px"
                android:title="@string/SignOut"/>

    </group>
</menu>